--- a/tsconfig.json
+++ b/tsconfig.json
@@ -87,7 +87,7 @@
 			"@controllers/*": ["./src/controllers/*"],
 			"@config/*": ["./src/config/*"],
 			"@models/*": ["./src/models/*"],
-			"@services/*": [".src/services/*"]
+			"@services/*": ["./src/services/*"]
 		},
 		"typeRoots": ["./node_modules/@types", "./src/@types"],
 
