--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
 		"@babel/preset-env": "^7.22.10",
 		"@babel/preset-typescript": "^7.22.5",
 		"@types/axios": "^0.14.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/body-parser": "^1.19.2",
 		"@types/cookie-parser": "^1.4.3",
+		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
 		"@types/pg": "^8.10.2",
 		"@types/sequelize": "^4.28.15",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
@@ -37,9 +40,11 @@
 	},
 	"dependencies": {
 		"axios": "^1.4.0",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"cookie-parser": "^1.4.6",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.1",
 		"pg": "^8.11.2",
 		"sequelize": "^6.32.1"
 	}
