--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
 		"pg": "^8.11.2",
-		"sequelize": "^6.32.1"
+		"sequelize": "^6.32.1",
+		"validator": "^13.11.0"
 	}
 }
