--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/pg": "^8.10.2",
 		"@types/sequelize": "^4.28.15",
+		"@types/validator": "^13.11.1",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
 		"babel-plugin-module-resolver": "^5.0.0",
