--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,12 +1,12 @@
 {
-    "extends": "./tsconfig.json",
-    "include": [
-        // repeated from base config's "include" setting
-        "src",
-        "tests",
-        "babel.config.js",
+	"extends": "./tsconfig.json",
+	"include": [
+		// repeated from base config's "include" setting
+		"src",
+		"tests",
+		"babel.config.js",
 
-        // these are the eslint-only inclusions
-        ".eslintrc.js",
-    ]
+		// these are the eslint-only inclusions
+		".eslintrc.js"
+	]
 }
