--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"cookie-parser": "^1.4.6",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
+		"dotenv": "^16.3.1",
 		"pg": "^8.11.2",
 		"sequelize": "^6.32.1",
 		"validator": "^13.11.0"
