--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"start": "node build/index.js",
 		"dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules ./src/index.ts",
 		"lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-		"format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+		"format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+
+		"test": "set NODE_OPTIONS=--experimental-vm-modules && npx jest"
 	},
 	"author": "",
 	"license": "ISC",
@@ -34,7 +36,9 @@
 		"dotenv": "^16.3.1",
 		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^9.0.0",
+		"jest": "^29.7.0",
 		"prettier": "^3.0.2",
+		"supertest": "^6.3.3",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.1.6"
@@ -44,9 +48,9 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"cookie-parser": "^1.4.6",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
-		"dotenv": "^16.3.1",
 		"pg": "^8.11.2",
 		"sequelize": "^6.32.1",
 		"validator": "^13.11.0"
